# r5py

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  test_detailed_itineraries_car_kmh.gpkg  tox.ini
.binder/: environment.yaml  environment.yml  postBuild  pre-generate-transport-networks.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: PKGBUILD.template  binder.yml  build-merged-pull-requests.yml  distribution-packages.yml  lint-test-build-upon-push.yml  lint-test-upon-push.yml  lint.yml  prebuild-binder.yml  release-and-deploy-v-tags.yml  release.yml  sync-notebooks.yml  test.yml
binder/: environment.yml
ci/: binder.yaml  python_310.yaml  python_310_dev.yaml  python_311.yaml  python_311_dev.yaml  python_312.yaml  python_313.yaml  python_313_dev.yaml  python_37.yaml  python_38.yaml  python_39.yaml  r5py.yaml  r5py_dev.yaml  r5py_distro.yaml
docs/: .jupytext.toml  CONTRIBUTING.md  CONTRIBUTIONS.md  basic-usage.ipynb  citation.md  conf.py  configuration.md  configuration.rst  index.md  index.rst  installation.md  installation.rst  reference.rst  requirements.txt
docs/_extensions/bibliography_as_sphinxdesign_cards/: __init__.py
docs/_helpers/: binder_ref.py  citation_style.py
docs/_static/: custom.css  references.bib
docs/_static/data/: README.md
docs/community/: CODE_OF_CONDUCT.md
docs/configuration/: configuration.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/data/: README.md  population_grid_2020.gpkg  population_points_2020.gpkg
docs/data/São Paulo/: spo_hexgrid.csv
docs/data/scripts/: download_population_grid.py
docs/data/test data/: test_valid_points_data.geojson
docs/data/test_data/: test_detailed_itineraries_bicycle.pickle  test_detailed_itineraries_car.pickle  test_detailed_itineraries_walking.pickle  test_invalid_points_no_id_column.geojson  test_snapped_population_grid_centroids.geojson  test_walking_details_not_snapped.csv  test_walking_times_snapped.csv
docs/md/: basic-usage.md
docs/notebooks/: basic-usage.ipynb
docs/reference/: reference.md
docs/usage/: basic-usage.md
docs/user-guide/: citation.md  configuration.md  installation.md  user-manual.md
docs/user-guide/installation/: installation.md  troubleshooting.md
docs/user-guide/user-manual/: advanced-usage.md  advanced-use.md  configuration.md  data-requirements.md  detailed-itineraries.md  isochrones.md  multi-objective-routing.md  quickstart.md  travel-time-matrices.md  user-manual.md
exploring/: with-jnius.py  with-jpype.py
src/: test.py  test.py.bak
src/r5p/: __init__.py  __main__.py
src/r5p/r5/: __init__.py  breakdown_stat.py  leg_mode.py  regional_task.py  scenario.py  speed_config.py  speed_unit.py  street_mode.py  transit_mode.py  transport_network.py  transport_network_builder_config.py  transport_network_builder_config.py.bak  travel_time_matrix.py
src/r5p/util/: __init__.py  config.py  enums.py.no_that_does_not_work  java_enum.py  jvm.py  memory_footprint.py  snake_to_camel_case.py  verbosity.py
src/r5py/: __init__.py  __main__.py
src/r5py/r5/: __init__.py  access_leg.py  base_travel_time_matrix.py  base_travel_time_matrix_computer.py  breakdown_stat.py  custom_cost_transport_network.py  custom_cost_travel_time_matrix_computer.py  detailed_itineraries.py  detailed_itineraries_computer.py  direct_leg.py  egress_leg.py  elevation_cost_function.py  elevation_model.py  file_storage.py  isochrones.py  leg_mode.py  regional_task.py  scenario.py  speed_config.py  street_layer.py  street_mode.py  street_segment.py  transfer_leg.py  transit_layer.py  transit_leg.py  transit_mode.py  transport_mode.py  transport_network.py  transport_network_builder_config.py  travel_time_matrix.py  travel_time_matrix_computer.py  travel_time_matrix_computer.py_orig  trip.py  trip_leg.py  trip_planner.py
src/r5py/util/: __init__.py  camel_to_snake_case.py  check_od_data_set.py  classpath.py  config.py  contains_gtfs_data.py  data_set.py  (+21 more)
tests/: __init__.py  conftest.py  pytest_platform_specific_warns.py  temporary_directory.py  test_breakdownstats.py  test_camel_to_snake_case.py  test_classpath.py  test_config.py  test_contains_gtfs_data.py  test_custom_cost_transport_network.py  test_custom_cost_travel_time_matrix_computer.py  test_custom_cost_travel_time_matrix_computer.py_DISABLED  test_data_set.py  test_data_validation.py  test_detailed_itineraries.py  test_detailed_itineraries_computer.py  test_deterministic_behaviour.py  test_elevation_cost_function.py  test_elevation_model.py  test_file_digest.py  test_file_storage.py  test_good_enough_equidistant_crs.py  test_isochrones.py  test_java_casting.py  test_jvm.py  test_legmode.py  test_memory_footprint.py  test_parse_int_date.py  test_regional_task.py  test_remote_file.py  test_sample_data_set.py  test_snake_to_camel_case.py  test_street_layer.py  test_streetmode.py  test_transit_layer.py  test_transitmode.py  test_transport_mode.py  test_transport_network.py  test_travel_time_matrix.py  test_travel_time_matrix_computer.py  (+8 more)
tests/conftest_d/: __init__.py  custom_costs.py  data_directory.py  destinations.py  file_digest.py  garbage_collection.py  origins.py  r5_jar.py  routing_parameters.py  routing_results.py  sample_data.py  transport_network.py  upstream_r5.py
tests/data/: test_custom_cost_helsinki_osmid_doubles.csv  test_custom_cost_helsinki_osmid_zeros.csv  test_custom_costs_travel_times_bicycle.csv  test_custom_costs_travel_times_car.csv  test_custom_costs_travel_times_transit.csv  test_data_custom_cost_kantakaupunki_osmid_ways.csv  test_invalid_points_duplicate_ids.geojson  test_multiple_origins.geojson  test_osm_data_zeros_kantakaupunki.csv  test_snapped_population_grid_centroids.geojson  test_travel_times_bicycle.csv  test_travel_times_car.csv  test_travel_times_transit.csv  test_travel_times_walk.csv  test_valid_single_point_data.geojson  test_walking_times_not_snapped.csv
(+5 files in other folders)
