[metadata]
name = r5py

version = attr: r5py.__version__
license = GPLv3

description = Python wrapper for the R5 routing analysis engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r5py/r5py
project_urls =
    Documentation = https://r5py.readthedocs.org/
    Change Log = https://github.com/r5py/r5py/blob/main/CHANGELOG.md
    Bug Tracker = https://github.com/r5py/r5py/issues

author = Christoph Fink, Henrikki Tenkanen, Willem Klumpenhouwer, Marcus Sairava, Rafael Pereira
author_email = christoph.fink@helsinki.fi

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8
install_requires =
    ConfigArgParse
    fiona
    geopandas
    joblib
    jpype1
    numpy
    pandas
    psutil
    requests

[options.packages.find]
where = src
include = *
